--- a/ws/src/hric_sys/package.xml
+++ b/ws/src/hric_sys/package.xml
@@ -20,20 +20,12 @@
 
 	<buildtool_depend>catkin</buildtool_depend>
 
-	<build_depend>roscpp</build_depend>
-	<build_depend>rospy</build_depend>
-	<build_depend>std_msgs</build_depend>
-	<build_depend>message_generation</build_depend>
-	<build_depend>data_handler</build_depend>
+	<depend>roscpp</depend>
+	<depend>std_msgs</depend>
+	<depend>message_generation</depend>
+	<depend>message_runtime</depend>
 
-	<build_export_depend>roscpp</build_export_depend>
-	<build_export_depend>rospy</build_export_depend>
-	<build_export_depend>std_msgs</build_export_depend>
-
-	<exec_depend>roscpp</exec_depend>
-	<exec_depend>rospy</exec_depend>
-	<exec_depend>std_msgs</exec_depend>
-	<exec_depend>message_runtime</exec_depend>
-	<exec_depend>data_handler</exec_depend>
+	<depend>data_handler</depend>
+	<depend>franka_gazebo</depend>
 
 </package>
