--- a/ws/src/data_handler/CMakeLists.txt
+++ b/ws/src/data_handler/CMakeLists.txt
@@ -1,20 +1,20 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(data_handler)
 
-## C++17
-add_compile_options(-std=c++17)
+# C++17
+set(CMAKE_CXX_STANDARD 17)
 
-## Find catkin and any catkin packages
+# Find catkin and any catkin packages
 find_package(
-	catkin
-	REQUIRED COMPONENTS
+	catkin REQUIRED
+	COMPONENTS
 	roscpp
 	rospy
 	std_msgs
 	genmsg
 )
 
-## declare ROS messages and services
+# declare ROS messages and services
 add_message_files(
 	FILES
 	GenericData.msg
@@ -26,46 +26,48 @@ add_service_files(
 	RegisterHWNode.srv
 )
 
-## generate added messages and services
+# generate added messages and services
 generate_messages(
 	DEPENDENCIES
 	std_msgs
 )
 
-## declare a catkin package
+# declare a catkin package
 catkin_package(
 	INCLUDE_DIRS include
-	CATKIN_DEPENDS message_runtime
-	std_msgs
+	LIBRARIES hw_node_lib
+	CATKIN_DEPENDS message_runtime std_msgs
 )
 
-## include dirs
-include_directories(include ${catkin_INCLUDE_DIRS})
+# include dirs
+include_directories(
+	include
+	${catkin_INCLUDE_DIRS}
+)
 
-## nodes
+# nodes
 
-### data_handler node
+## data_handler node
 add_executable(data_handler src/data_handler.cpp)
 target_link_libraries(data_handler ${catkin_LIBRARIES})
 add_dependencies(data_handler ${PROJECT_NAME}_generate_messages_cpp)
 
-### data_handler lib
-# ...
+# libraries
 
-### hw_node library
-add_library(hw_node_lib src/hw_node.cpp)
+## hw_node library
+# https://roboticsbackend.com/ros-include-cpp-header-from-another-package/
+add_library(hw_node_lib src/hw_node_lib.cpp)
 target_link_libraries(hw_node_lib ${catkin_LIBRARIES})
-add_dependencies(hw_node_lib ${PROJECT_NAME}_generate_messages_cpp)
 
-### test talker node
-add_executable(hwtalker src/hwtalker.cpp)
-target_link_libraries(hwtalker ${catkin_LIBRARIES} hw_node_lib)
-add_dependencies(hwtalker ${PROJECT_NAME}_generate_messages_cpp)
-
-### test listener node
-add_executable(hwlistener src/hwlistener.cpp)
-target_link_libraries(hwlistener ${catkin_LIBRARIES} hw_node_lib)
-add_dependencies(hwlistener ${PROJECT_NAME}_generate_messages_cpp)
+install(
+	TARGETS hw_node_lib
+	ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+	LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+	RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
+)
 
 ## install all project namespaced headers (package/include)
-install(DIRECTORY include/${PROJECT_NAME}/ DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION} FILES_MATCHING PATTERN "*.h" PATTERN ".svn" EXCLUDE)
+install(
+	DIRECTORY include/${PROJECT_NAME}/
+	DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+)
