add dynamics lib w/ gravity calculation

--- a/ws/src/franka_gazebo/CMakeLists.txt
+++ b/ws/src/franka_gazebo/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_CXX_STANDARD 17)
 ## dependencies (catkin packages)
 find_package(
 	catkin REQUIRED
+	Eigen3 REQUIRED
 	COMPONENTS
 	roscpp
 	xacro
@@ -19,16 +20,41 @@ find_package(
 	joint_trajectory_controller
 	gazebo_ros
 	gazebo_ros_control
+	orocos_kdl
+	kdl_parser
 )
 
 # declare a catkin package
 catkin_package(
+	INCLUDE_DIRS include
+	LIBRARIES dynamics_lib
 	CATKIN_DEPENDS controller_manager
+	DEPENDS EIGEN3
 )
 
 ## include dirs
-include_directories(${catkin_INCLUDE_DIRS})
+include_directories(
+	include
+	${catkin_INCLUDE_DIRS}
+	SYSTEM ${EIGEN3_INCLUDE_DIRS}
+)
 
-## add custom controller as library
-# add_library(${PROJECT_NAME}_controllers_lib src/joint_trajectory_controller.cpp)
-# target_link_libraries(${PROJECT_NAME}_controllers_lib ${catkin_LIBRARIES})
+# libraries
+
+## hw_node library
+# https://roboticsbackend.com/ros-include-cpp-header-from-another-package/
+add_library(dynamics_lib src/dynamics_lib.cpp)
+target_link_libraries(dynamics_lib ${catkin_LIBRARIES})
+
+install(
+	TARGETS dynamics_lib
+	ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+	LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+	RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
+)
+
+## install all project namespaced headers (package/include)
+install(
+	DIRECTORY include/${PROJECT_NAME}/
+	DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+)
