--- a/ws/src/franka_sim_controllers/package.xml
+++ b/ws/src/franka_sim_controllers/package.xml
@@ -2,15 +2,10 @@
 <package format="2">
 
 	<name>franka_sim_controllers</name>
-	<version>0.0.0</version>
-	<description>Human-Robot Interaction and Collaboration System</description>
+	<version>0.1.0</version>
+	<description>Panda Franka controllers for simulated environments.</description>
 
-	<author email="chfa@mmmi.sdu.dk">Cheng Feng</author>
-	<author email="dscho15@student.sdu.dk">Daniel Tofte Schøn</author>
 	<author email="marta16@student.sdu.dk">Martin Androvich</author>
-
-	<maintainer email="chfa@mmmi.sdu.dk">Cheng Feng</maintainer>
-	<maintainer email="dscho15@student.sdu.dk">Daniel Tofte Schøn</maintainer>
 	<maintainer email="marta16@student.sdu.dk">Martin Androvich</maintainer>
 
 	<license>TODO</license>
@@ -22,5 +17,11 @@
 
 	<depend>roscpp</depend>
 	<depend>franka_gazebo</depend>
+	<depend>controller_interface</depend>
+	<depend>pluginlib</depend>
+
+	<export>
+		<controller_interface plugin="${prefix}/franka_sim_controllers_plugin.xml"/>
+	</export>
 
 </package>
