--- a/ws/src/urdf_to_osim/package.xml
+++ b/ws/src/urdf_to_osim/package.xml
@@ -16,6 +16,7 @@
 	<buildtool_depend>catkin</buildtool_depend>
 
 	<depend>roscpp</depend>
+	<depend>roslib</depend>
 	<depend>xacro</depend>
 	<depend>orocos_kdl</depend>
 	<depend>kdl_parser</depend>
