add contact mesh
add contact geometry to model

update OSIM model

update OSIM model

update OSIM model

update OSIM model

update OSIM model

add GUI to visualization

update OSIM model

update OSIM model

update OSIM model

--- a/ws/src/franka_visualization/package.xml
+++ b/ws/src/franka_visualization/package.xml
@@ -14,5 +14,7 @@
   <depend>sensor_msgs</depend>
   <depend>franka_description</depend>
   <depend>xacro</depend>
+  <depend>joint_state_publisher</depend>
+  <depend>joint_state_publisher_gui</depend>
 
 </package>
