update franka_panda OSIM example + add basic controller

--- a/ws/src/urdf_to_osim/CMakeLists.txt
+++ b/ws/src/urdf_to_osim/CMakeLists.txt
@@ -82,10 +82,6 @@ install(
 add_executable(urdf_to_osim src/urdf_to_osim.cpp)
 target_link_libraries(urdf_to_osim ${catkin_LIBRARIES} lib_urdf_to_osim ${OpenSim_LIBRARIES})
 
-## osim_example
-add_executable(osim_example src/osim_example.cpp)
-target_link_libraries(osim_example ${catkin_LIBRARIES} ${OpenSim_LIBRARIES})
-
-## osim_franka_example
-add_executable(osim_franka_example src/osim_franka_example.cpp)
-target_link_libraries(osim_franka_example ${catkin_LIBRARIES} ${OpenSim_LIBRARIES})
+## franka_panda_example
+add_executable(franka_panda_example src/franka_panda_example/franka_panda_example.cpp)
+target_link_libraries(franka_panda_example ${catkin_LIBRARIES} ${OpenSim_LIBRARIES})
