--- a/ws/src/franka_irl_controllers/CMakeLists.txt
+++ b/ws/src/franka_irl_controllers/CMakeLists.txt
@@ -20,6 +20,23 @@ find_package(
 # find libfranka
 find_package(Franka 0.7.0 REQUIRED)
 
+# Finding Eigen is somewhat complicated because of our need to support Ubuntu
+# all the way back to saucy.  First we look for the Eigen3 cmake module
+# provided by the libeigen3-dev on newer Ubuntu.  If that fails, then we
+# fall-back to the version provided by cmake_modules, which is a stand-in.
+find_package(Eigen3 QUIET)
+if(NOT EIGEN3_FOUND)
+	find_package(cmake_modules REQUIRED)
+	find_package(Eigen REQUIRED)
+	set(EIGEN3_INCLUDE_DIRS ${EIGEN_INCLUDE_DIRS})
+endif()
+
+# Note that eigen 3.2 (on Ubuntu Wily) only provides EIGEN3_INCLUDE_DIR,
+# not EIGEN3_INCLUDE_DIRS, so we have to set the latter from the former.
+if(NOT EIGEN3_INCLUDE_DIRS)
+	set(EIGEN3_INCLUDE_DIRS ${EIGEN3_INCLUDE_DIR})
+endif()
+
 # declare a catkin package
 catkin_package(
 	INCLUDE_DIRS include
@@ -34,6 +51,7 @@ catkin_package(
 	DEPENDS
 		Franka
 		orocos_kdl
+		EIGEN3
 )
 
 # include dirs
@@ -52,8 +70,11 @@ include_directories(
 
 # libraries
 
-## ...
-add_library(franka_irl_controllers src/cartesian_position_controller.cpp)
+## controllers
+add_library(franka_irl_controllers
+	src/cartesian_position_controller.cpp
+	src/joint_position_pd_gravity_controller.cpp
+)
 target_link_libraries(franka_irl_controllers ${catkin_LIBRARIES})
 
 install(
